--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -1,4 +1,7 @@
 Django==1.6.2
+Markdown==2.4
 South==0.8.4
+django-filter==0.7
 django-model-utils==2.0.2
+djangorestframework==2.3.13
 wsgiref==0.1.2
