--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -4,4 +4,5 @@ django-debug-toolbar==1.0.1
 django-filter==0.7
 django-model-utils==2.0.2
 djangorestframework==2.3.13
+gspread==0.1.0
 wsgiref==0.1.2
