--- a/mobileapp/bikeapp/platforms/ios/Bikecount/Bikecount-Info.plist
+++ b/mobileapp/bikeapp/platforms/ios/Bikecount/Bikecount-Info.plist
@@ -77,7 +77,13 @@
       <string>UIInterfaceOrientationPortraitUpsideDown</string>
       <string>UIInterfaceOrientationLandscapeRight</string>
     </array>
+    <key>LSApplicationCategoryType</key>
+    <string></string>
+    <key>CFBundleGetInfoString</key>
+    <string></string>
     <key>CFBundleShortVersionString</key>
     <string>0.0.1</string>
+    <key>ExternalHosts</key>
+    <string>*</string>
   </dict>
 </plist>
