--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -1,8 +1,13 @@
 Django==1.7
+Magic-file-extensions==0.2
 django-bootstrap3==3.3.0
 django-debug-toolbar==1.0.1
+django-extensions==1.4.9
 django-filter==0.7
 django-model-utils==2.0.2
 djangorestframework==2.3.13
 gspread==0.1.0
+libxml2-python==2.9.1
+six==1.8.0
+sqlparse==0.1.14
 wsgiref==0.1.2
