--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -7,6 +7,7 @@ django-filter==0.7
 django-model-utils==2.0.2
 djangorestframework==3.0.2
 gspread==0.1.0
+pytz==2014.10
 raven==5.2.0
 six==1.8.0
 sqlparse==0.1.14
